<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:scrollbarStyle="outsideOverlay" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow>
            <TextView
                android:text="@string/newtask_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="@color/colorlblnewtaskform"
                android:layout_marginRight="5dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textAlignment="viewEnd"
                android:gravity="center_vertical" />

            <EditText
                android:id="@+id/et_title_ed"
                android:hint="@string/newtask_title_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/coloretnewtaskform"
                android:ems="10"
                android:gravity="left"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_weight="0.8"/>

        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="@color/colorAccent" />

        <TableRow>

            <TextView
                android:text="@string/newtask_duedate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorlblnewtaskform"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:gravity="center_vertical"
                android:textAlignment="textEnd" />

            <DatePicker
                android:id="@+id/dt_duedate_ed"
                android:layout_width="0dp"
                android:calendarViewShown="false"
                android:layout_gravity="left"
                android:textColor="@color/coloretnewtaskform"
                android:layout_marginRight="5dp"
                android:layout_weight="0.8"
                style="@android:style/Widget.DatePicker" />

        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="@color/colorAccent" />

        <TableRow>
            <TextView
                android:text="@string/newtask_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorlblnewtaskform"
                android:layout_weight="0.2"
                android:layout_marginRight="5dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textAlignment="viewEnd"
                android:gravity="center_vertical" />

            <EditText
                android:id="@+id/dt_Detail_ed"
                android:hint="@string/newtask_detail_hint"
                android:inputType="textMultiLine"
                android:ems="10"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:layout_width="0dp"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="@color/coloretnewtaskform"
                android:layout_marginRight="5dp"
                android:layout_weight="0.8"
                android:selectAllOnFocus="false"
                android:layout_height="150dp" />

        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="@color/colorAccent" />

        <TableRow>
            <TextView
                android:text="@string/newtask_priority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorlblnewtaskform"
                android:layout_weight="0.2"
                android:layout_marginRight="5dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textAlignment="viewEnd"
                android:gravity="center_vertical" />

            <Spinner
                android:id="@+id/sp_priority_ed"
                android:hint="@string/newtask_priority_hint"
                android:layout_gravity="left"
                android:layout_width="0dp"
                android:entries="@array/priority_level_array"
                android:paddingBottom="20dp"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:paddingTop="20dp"
                android:layout_height="wrap_content"
                android:textColor="@color/coloretnewtaskform"
                android:layout_marginRight="5dp"
                android:layout_weight="0.8"/>

        </TableRow>



    </TableLayout>




</ScrollView>
